# hangman

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp
include/: Character.h  Dictionary.h  Game.h  Vector.h  Word.h
src/: Character.cpp  Dictionary.cpp  Game.cpp  Word.cpp
